增加接口和页面组件的权限控制
